--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,53 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  background-color:#A8A8A8;
+}
+
+.jumbotron{
+  background-color: #6E6E6E;
+  color: #FFF;
+}
+
+.campeonato{
+  color: #9C9C9C;
+  font-size: 1.0em;
+
+}
+
+.jumbotron hr{
+  width: 25px;
+  border-width: 3px;
+  border-color: #9C9C9C;
+}
+
+
+.selecionados span{
+   font-size: 1.4em;
+   color: #FFF;
+   font-weight: bold;
+}
+
+.titulo-filme{
+  font-size: 0.8em;
+  font-weight: bold;
+  color: #000000;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.ano{
+  color: #9C9C9C;
+  font-size: 0.8em;
+}
+
+.big-checkbox {
+  width: 18px;
+  height: 18px;
+}
+
+.form-check-input {
+  position: absolute;
+  margin-top: 0.9rem;
+  margin-left: -1.5rem;
+}
