--- a/src/styles.css
+++ b/src/styles.css
@@ -51,3 +51,9 @@ body{
   margin-top: 0.9rem;
   margin-left: -1.5rem;
 }
+
+.posicao{
+  background-color: #6E6E6E;
+  color: #FFF;
+  text-align: center;
+}
